--- a/style_about.css
+++ b/style_about.css
@@ -387,6 +387,14 @@ textarea {
   gap: 30px;
 }
 
+.grid-container3 {
+  margin-top: 16px;
+  margin-bottom: 64px;
+  display: grid;
+  grid-template-columns: 3fr 3fr 3fr;
+  gap: 30px;
+}
+
 .box1, .box2, .box3, .box4, .box5, .box6, .box7, .box8, .box9, .box10, .box11, .box12, .box13, .box14, .box15, .box16, .box17, .box18, .box19, .box20, .box21, .box22 {
   padding: 10px;  
   border: 0.5px solid white;
