--- a/login.css
+++ b/login.css
@@ -344,3 +344,7 @@ label{
   70%  { transform: rotate(-10deg); }
   100% { transform: rotate(0deg); }
 }
+.logo{
+    height: 20px;
+    padding: 0px 0px;
+}
