--- a/spaces-side-panel-styles.css
+++ b/spaces-side-panel-styles.css
@@ -64,51 +64,51 @@
 }
 
 #RainyCafeAtNight{
-    background-image: url("/images/cafe-at-night.png");
+    background-image: url("images/cafe-at-night.png");
     background-size: cover;
 }
 
 #HollowForest{
-    background-image: url("/images/hollow-forest.png");
+    background-image: url("images/hollow-forest.png");
     background-size: cover;
 }
 
 #ByTheOcean{
-    background-image: url("/images/by-the-ocean.png");
+    background-image: url("images/by-the-ocean.png");
     background-size: cover;
 }
 
 #SnowyCabin{
-    background-image: url("/images/snowy-cabin.png");
+    background-image: url("images/snowy-cabin.png");
     background-size: cover;
 }
 
 #Toronto{
-    background-image: url("/images/toronto.png");
+    background-image: url("images/toronto.png");
     background-size: cover;
 }
 
 #StarWars{
-    background-image: url("/images/star-wars.png");
+    background-image: url("images/star-wars.png");
     background-size: cover;
 }
 
 #AnimeGirlStudying{
-    background-image: url("/images/anime-girl-studying.png");
+    background-image: url("images/anime-girl-studying.png");
     background-size: cover;
 }
 
 #FirePlace{
-    background-image: url("/images/fireplace.png");
+    background-image: url("images/fireplace.png");
     background-size: cover;
 }
 
 #DystopianCity{
-    background-image: url("/images/dystopian-city.png");
+    background-image: url("images/dystopian-city.png");
     background-size: cover;
 }
 
 #Cafe{
-    background-image: url("/images/cafe.png");
+    background-image: url("images/cafe.png");
     background-size: cover;
 }
